fix(TCOMP-2631): stay java 8 compatible