@@ -28,11 +28,11 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.io.UnsupportedEncodingException;
 import java.io.Writer;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
@@ -392,8 +392,7 @@ public class CarMain {
                 final String spec = url.getFile();
                 final int separator = spec.indexOf('!');
                 return new File(
-                        URLDecoder.decode(new URL(spec.substring(0, separator)).getFile(), StandardCharsets.UTF_8));
-
+                        URLDecoder.decode(new URL(spec.substring(0, separator)).getFile(), "UTF-8"));
             } else if ("file".equals(url.getProtocol())) {
                 return toFile(resourceName, url);
             } else {
@@ -406,10 +405,10 @@ public class CarMain {
         }
     }
 
-    private static File toFile(final String classFileName, final URL url) {
+    private static File toFile(final String classFileName, final URL url) throws UnsupportedEncodingException {
         final String path = url.getFile();
         return new File(
-                URLDecoder.decode(path.substring(0, path.length() - classFileName.length()), StandardCharsets.UTF_8));
+                URLDecoder.decode(path.substring(0, path.length() - classFileName.length()), "UTF-8"));
     }
 
     private static void deployToNexus(final String serverUrl, final String repositoryName, final String username,
